# agent-repository

./: .gitignore  README.md
.github/workflows/: ci.yml
Scripts/: call_instance.sh  create_agent.sh  create_location.sh  delete_agent.sh  delete_location.sh  deploy_agent.sh  list_agents_at_location.sh  list_all_agents.sh  list_deployments_for_agent.sh  list_locations.sh  reset_demo_and_run_with_scripts.sh  start_instance.sh
agents_demo/: chemical_parser.py  materials_screening.py  ml_classifier.py  simple_agent.py  stats_agent.py
backend/: pyproject.toml
backend/app/: academy_runtime.py  crud.py  database.py  main.py  model.py  models.py  runner.py  runtime.py  schemas.py  store.py
backend/tests/: test_agents.py  test_health.py  test_smoke.py
examples/materials-screening-agent/: README.md  agent.yaml
examples/materials-screening-agent/inputs/: example.json
examples/simple-demo-agent/: README.md  agent.yaml
examples/stats-demo-agent/: agent.yaml
examples/stats-demo-agent/inputs/: simple.json
examples/workflows/: materials_stats_workflow.py
frontend/: package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts
sdk/: agent.yaml  demo_inputs.json  pyproject.toml
sdk/academy_agents/: __init__.py  cli.py  client.py  runner.py
sdk/tests/: test_cli.py  test_client.py
