[project]
name = "academy-agents-sdk"
version = "0.1.0"
description = "Python SDK for the Academy Agent Repository"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
