[project]
name = "academy-agents-sdk"
version = "0.1.0"
description = "Python SDK for the Academy Agent Repository"
authors = [{ name = "Academy Team" }]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
academy-agents = "academy_agents.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

